# Lorebook-Builder

./: .gitignore  Cargo.toml  Example World Info.json  LICENSE  README.md
.github/workflows/: release.yml
assets/icons/: README.md
assets/icons/tabs/: README.md
src/: app.rs  config.rs  main.rs  theme.rs
src/crawler/: api.rs  cache.rs  extract.rs  mod.rs  pages.rs  wikitext.rs
src/export/: mod.rs  sillytavern.rs
src/model/: entry.rs  lorebook.rs  mod.rs  sqlite.rs
src/tabs/: crawl.rs  export.rs  library.rs  mod.rs
src/ui/: category_icons.rs  editor.rs  mod.rs  tab_icons.rs  table.rs  toast.rs  widgets.rs
